Fix headers to look better on mobile on Harvest stats page.

--- a/css/activity-map.css
+++ b/css/activity-map.css
@@ -1,5 +1,6 @@
+h3 {
+  margin-bottom: -2px;
 }
-
 .states {
   fill: #66c2a4; /*A9BDAD*/
   cursor: pointer;
@@ -34,7 +35,7 @@ div#container {
 }
 
 div#map-container{
-  /*position: relative;
+  /*position: relative;*/
   height: 350px;
   width: 550px;
 }
